--- a/comingsoon/index.html
+++ b/comingsoon/index.html
@@ -48,7 +48,7 @@
 					<li class="list-heading">Follow us for update</li>
 					<!-- <li><a href="#"><i class="ion-social-facebook"></i></a></li> -->
 					<!-- <li><a href="#"><i class="ion-social-twitter"></i></a></li> -->
-					<li><a href="mailto:it.fest.unj@gmail.com"><i class="ion-social-googleplus"></i></a></li>
+					<li><a href="mailto:itexpo.unj@gmail.com"><i class="ion-social-googleplus"></i></a></li>
 					<li><a href="https://instagram.com/itexpo_unj"><i class="ion-social-instagram-outline"></i></a></li>
 					<!-- <li><a href="#"><i class="ion-social-pinterest"></i></a></li> -->
 				</ul>
