--- a/production/login.html
+++ b/production/login.html
@@ -280,7 +280,7 @@
                         </div>
                         <div class="col-sm-2 g-margin-b-20--xs g-margin-b-0--md">
                             <ul class="list-unstyled g-ul-li-tb-5--xs g-margin-b-0--xs">
-                                <li><a class="g-font-size-15--xs g-color--white-opacity" href="mailto:it.fest.unj@gmail.com">it.fest.unj@gmail.com</a></li>
+                                <li><a class="g-font-size-15--xs g-color--white-opacity" href="mailto:itexpo.unj@gmail.com">itexpo.unj@gmail.com</a></li>
                                 <li><a class="g-font-size-15--xs g-color--white-opacity" href="https://instagram.com/itexpo_unj">Instagram</a></li>
                             </ul>
                         </div>
