--- a/production/verifikasi.html
+++ b/production/verifikasi.html
@@ -99,9 +99,9 @@
             <!-- Action -->
             <ul class="list-inline s-header__action s-header__action--rb">
                 <li class="s-header__action-item">
-                    <a class="s-header__action-link" href="mailto:it.fest.unj@gmail.com">
+                    <a class="s-header__action-link" href="mailto:itexpo.unj@gmail.com">
                         <i class="g-padding-r-5--xs ti-twitter"></i>
-                        <span class="g-display-none--xs g-display-inline-block--sm">it.fest.unj@gmail.com</span>
+                        <span class="g-display-none--xs g-display-inline-block--sm">itexpo.unj@gmail.com</span>
                     </a>
                 </li>
                 <li class="s-header__action-item">
@@ -227,7 +227,7 @@
                     </div>
                     <div class="col-sm-2 g-margin-b-20--xs g-margin-b-0--md">
                         <ul class="list-unstyled g-ul-li-tb-5--xs g-margin-b-0--xs">
-                            <li><a class="g-font-size-15--xs g-color--white-opacity" href="mailto:it.fest.unj@gmail.com">it.fest.unj@gmail.com</a></li>
+                            <li><a class="g-font-size-15--xs g-color--white-opacity" href="mailto:itexpo.unj@gmail.com">itexpo.unj@gmail.com</a></li>
                             <li><a class="g-font-size-15--xs g-color--white-opacity" href="https://instagram.com/itexpo_unj">Instagram</a></li>
                         </ul>
                     </div>
