--- a/production/user-dash.html
+++ b/production/user-dash.html
@@ -387,7 +387,7 @@
                             <h3 class="g-font-size-18--xs g-color--primary g-margin-b-30--xs">UI/UX</h3>
                             <ul class="list-unstyled g-ul-li-tb-5--xs g-margin-b-40--xs">
                                 <li>Workshop</li>
-                                <li>Oleh : Hafiezar</li>
+                                <!-- <li>Oleh : Hafiezar</li> -->
                             </ul>
                             <div class="g-margin-b-40--xs">
                                 <span class="s-plan-v1__price-mark">Rp.</span>
@@ -411,7 +411,7 @@
                             <h3 class="g-font-size-18--xs g-color--primary g-margin-b-30--xs">Guru TIK</h3>
                             <ul class="list-unstyled g-ul-li-tb-5--xs g-margin-b-40--xs">
                                 <li>Workshop</li>
-                                <li>Oleh : Hafiezar</li>
+                                <!-- <li>Oleh : Hafiezar</li> -->
                             </ul>
                             <div class="g-margin-b-40--xs">
                                 <span class="s-plan-v1__price-mark">Rp.</span>
@@ -435,7 +435,7 @@
                             <h3 class="g-font-size-18--xs g-color--primary g-margin-b-30--xs">Teknologi</h3>
                             <ul class="list-unstyled g-ul-li-tb-5--xs g-margin-b-40--xs">
                                 <li>Seminar</li>
-                                <li>Oleh : Hafiezar</li>
+                                <!-- <li>Oleh : Hafiezar</li> -->
                             </ul>
                             <div class="g-margin-b-40--xs">
                                 <span class="s-plan-v1__price-mark">Rp.</span>
