--- a/production/index_events.html
+++ b/production/index_events.html
@@ -671,7 +671,7 @@
                 </div>
                 <div class="modal-footer">
                     
-                    <a href="login.html" class="text-uppercase s-btn s-btn--sm s-btn--primary-bg g-radius--50 g-font-size-14--xs g-padding-x-20--xs" data-dismiss="modal">Registrasi</a>
+                    <a href="login.html" class="text-uppercase s-btn s-btn--sm s-btn--primary-bg g-radius--50 g-font-size-14--xs g-padding-x-20--xs">Registrasi</a>
                 </div>
             </div>
         </div>
@@ -708,7 +708,7 @@
                     <p>CP: +6281316486786 (Swardi)</p>
                 </div>
                 <div class="modal-footer">
-                    <a href="login.html" class="text-uppercase s-btn s-btn--sm s-btn--primary-bg g-radius--50 g-font-size-14--xs g-padding-x-20--xs" data-dismiss="modal">Registrasi</a>
+                    <a href="login.html" class="text-uppercase s-btn s-btn--sm s-btn--primary-bg g-radius--50 g-font-size-14--xs g-padding-x-20--xs">Registrasi</a>
                 </div>
             </div>
         </div>
@@ -742,7 +742,7 @@
                     <p>CP: +6283113536244 (Dimas)</p>
                 </div>
                 <div class="modal-footer">
-                    <a href="login.html" class="text-uppercase s-btn s-btn--sm s-btn--primary-bg g-radius--50 g-font-size-14--xs g-padding-x-20--xs" data-dismiss="modal">Registrasi</a>
+                    <a href="login.html" class="text-uppercase s-btn s-btn--sm s-btn--primary-bg g-radius--50 g-font-size-14--xs g-padding-x-20--xs">Registrasi</a>
                 </div>
             </div>
         </div>
@@ -774,7 +774,7 @@
                     <p>CP: +6283113536244 (Dimas)</p>
                 </div>
                 <div class="modal-footer">
-                    <a href="login.html" class="text-uppercase s-btn s-btn--sm s-btn--primary-bg g-radius--50 g-font-size-14--xs g-padding-x-20--xs" data-dismiss="modal">Registrasi</a>
+                    <a href="login.html" class="text-uppercase s-btn s-btn--sm s-btn--primary-bg g-radius--50 g-font-size-14--xs g-padding-x-20--xs">Registrasi</a>
                 </div>
             </div>
         </div>
@@ -808,7 +808,7 @@
                     <p>CP: +6287738885597 (Aldo)</p>
                 </div>
                 <div class="modal-footer">
-                    <a href="login.html" class="text-uppercase s-btn s-btn--sm s-btn--primary-bg g-radius--50 g-font-size-14--xs g-padding-x-20--xs" data-dismiss="modal">Registrasi</a>
+                    <a href="login.html" class="text-uppercase s-btn s-btn--sm s-btn--primary-bg g-radius--50 g-font-size-14--xs g-padding-x-20--xs">Registrasi</a>
                 </div>
             </div>
         </div>
@@ -840,7 +840,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <a href="login.html" class="text-uppercase s-btn s-btn--sm s-btn--primary-bg g-radius--50 g-font-size-14--xs g-padding-x-20--xs" data-dismiss="modal">Registrasi</a>
+                    <a href="login.html" class="text-uppercase s-btn s-btn--sm s-btn--primary-bg g-radius--50 g-font-size-14--xs g-padding-x-20--xs">Registrasi</a>
                 </div>
             </div>
         </div>
@@ -872,7 +872,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <a href="login.html" class="text-uppercase s-btn s-btn--sm s-btn--primary-bg g-radius--50 g-font-size-14--xs g-padding-x-20--xs" data-dismiss="modal">Registrasi</a>
+                    <a href="login.html" class="text-uppercase s-btn s-btn--sm s-btn--primary-bg g-radius--50 g-font-size-14--xs g-padding-x-20--xs">Registrasi</a>
                 </div>
             </div>
         </div>
@@ -903,7 +903,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <a href="login.html" class="text-uppercase s-btn s-btn--sm s-btn--primary-bg g-radius--50 g-font-size-14--xs g-padding-x-20--xs" data-dismiss="modal">Registrasi</a>
+                    <a href="login.html" class="text-uppercase s-btn s-btn--sm s-btn--primary-bg g-radius--50 g-font-size-14--xs g-padding-x-20--xs">Registrasi</a>
                 </div>
             </div>
         </div>
