--- a/production/index.html
+++ b/production/index.html
@@ -320,7 +320,7 @@
                                 <span class="g-display-inline-block--xs g-width-100--xs g-height-100--xs g-font-size-38--xs g-color--primary g-bg-color--white g-box-shadow__dark-lightest-v4 g-padding-x-20--xs g-padding-y-20--xs g-radius--circle">01</span>
                             </div>
                             <div class="g-padding-x-20--xs">
-                                <h3 class="g-font-size-18--xs g-color--white">Pendaftaran</h3>
+                                <h3 class="g-font-size-18--xs g-color--white">Pendaftaran Kompetisi</h3>
                                 <p class="g-font-size-18--xs g-color--white">19 September -<br/>26 Oktober 2018</p>
                             </div>
                         </div>
@@ -335,7 +335,7 @@
                             </div>
                             <div class="g-padding-x-20--xs">
                                 <h3 class="g-font-size-18--xs g-color--white">Kompetisi</h3>
-                                <p class="g-font-size-18--xs g-color--white">27 Oktober -<br/>29 November 2018</p>
+                                <p class="g-font-size-18--xs g-color--white">27 Oktober -<br/>28 November 2018</p>
                             </div>
                         </div>
                     </li>
@@ -349,7 +349,7 @@
                             </div>
                             <div class="g-padding-x-20--xs">
                                 <h3 class="g-font-size-18--xs g-color--white">Workshop</h3>
-                                <p class="g-font-size-18--xs g-color--white">29 November 2018</p>
+                                <p class="g-font-size-18--xs g-color--white">13 Oktober -<br/>21 Oktober 2018</p>
                             </div>
                         </div>
                     </li>
