--- a/production/index_events.html
+++ b/production/index_events.html
@@ -481,8 +481,8 @@
                                 <!-- <li>Oleh : Hafiezar</li> -->
                             </ul>
                             <div class="g-margin-b-40--xs">
-                                <span class="s-plan-v1__price-mark">Rp.</span>
-                                <span class="s-plan-v1__price-tag">0</span>
+                                <span class="s-plan-v1__price-mark"></span>
+                                <span class="s-plan-v1__price-tag">Coming Soon</span>
                             </div>
                             <ul class="list-unstyled g-ul-li-tb-5--xs g-margin-b-40--xs">
                                 <li>
@@ -530,7 +530,7 @@
       ), url(img/mobile_legends.jpg) repeat; background-size: 300px 150px">
         <div class="container g-text-center--xs g-padding-y-80--xs g-padding-y-125--sm">
             <div class="g-margin-b-80--xs">
-                <h2 class="g-font-size-40--xs g-font-size-50--sm g-font-size-60--md g-color--white">e-Sports - Mobile Legends</h2>
+                <h2 class="g-font-size-40--xs g-font-size-50--sm g-font-size-60--md g-color--white">e-Sport - Mobile Legends</h2>
                 <span class="s-plan-v1__price-mark g-color--white">Rp.</span>
                 <span class="s-plan-v1__price-tag g-color--white">200.000</span>
                 <small class="g-color--white">/tim</small>
@@ -727,7 +727,7 @@
                         <div class="col-sm-5 g-hor-centered-row__col">
 
                             <h2 class="g-font-size-32--xs g-font-size-36--sm g-margin-b-25--xs">Short Movie</h2>
-                            <p class="g-font-size-14--sm">Not Yet Described.</p>
+                            <p class="g-font-size-14--sm">Sebuah kompetisi bagi siswa/i SMA/SMK sederajat se-pulau Jawa yang merupakan bagian dari rangkaian kegiatan IT EXPO UNJ 2018. Kompetisi ini dilaksanakan guna mengembangkan para kreatif muda Indonesia khususnya pulau Jawa di bidang Film Pendek.</p>
                             <h5>Alur Kompetisi</h5>
                             <h6 class="g-font-size-14--xs"><label>Pengumpulan Film Gelombang I</label><br/>1 - 8 November 2018</h6>
                             <h6 class="g-font-size-14--xs"><label>Pengumpulan Film Gelombang II</label><br/>9 - 15 November 2018</h6>
@@ -761,7 +761,7 @@
                         <div class="col-sm-5 g-hor-centered-row__col">
 
                             <h2 class="g-font-size-32--xs g-font-size-36--sm g-margin-b-25--xs">Desain Poster</h2>
-                            <p class="g-font-size-14--sm">Not Yet Described.</p>
+                            <p class="g-font-size-14--sm">Sebuah kompetisi bagi siswa/i SMA/SMK sederajat se-pulau Jawa yang merupakan bagian dari rangkaian kegiatan IT EXPO UNJ 2018. Kompetisi ini dilaksanakan guna mengembangkan para kreatif muda Indonesia khususnya pulau Jawa di bidang desain poster.</p>
                             <h5>Alur Kompetisi</h5>
                             <h6 class="g-font-size-14--xs"><label>Pengumpulan Karya</label><br/>15 November 2018</h6>
                             <h6 class="g-font-size-14--xs"><label>Pengumuman</label><br/>29 November 2018</h6>
@@ -793,7 +793,7 @@
                         <div class="col-sm-5 g-hor-centered-row__col">
 
                             <h2 class="g-font-size-32--xs g-font-size-36--sm g-margin-b-25--xs">E-Sports - Mobile Legends</h2>
-                            <p class="g-font-size-14--sm">Not Yet Described.</p>
+                            <p class="g-font-size-14--sm">Sebuah kompetisi bagi siswa/i SMA/SMK sederajat se-pulau Jawa yang merupakan bagian dari rangkaian kegiatan IT EXPO UNJ 2018. Kompetisi ini dilaksanakan untuk menguji kemampuan para atlet muda e-sport Indonesia khusunya didaerah jakarta dan sekitarnya.</p>
                             <h5>Alur Kompetisi</h5>
                             <h6 class="g-font-size-14--xs"><label>Penyisihan</label><br/>19 - 26 November 2018</h6>
                             <h6 class="g-font-size-14--xs"><label>Perempat Final</label><br/>27 November 2018</h6>
@@ -894,6 +894,7 @@
                             <p class="g-font-size-14--sm">Kegiatan puncak yang membahas perihal Teknologi Informasi serta pendidikan yang saling berkaitan untuk membantu dan meningkatkan kualitas pendidikan di Indonesia. Dengan menghadirkan pembicara yang mumpuni dibidangnya dengan
                                 harapan peserta seminar dapat melihat kondisi pendidikan saat ini dan dapat bersiap-siap menghadapi revolusi industri 4.0.</p>
                             <h5></h5>
+                            <h6 class="g-font-size-14--xs"><label>Pendaftaran</label><br/>29 Oktober - 22 November 2018</h6>
                             <h6 class="g-font-size-14--xs"><label>Seminar dan Expo</label><br/>29 November 2018</h6>
                         </div>
                         <div class="col-sm-1"></div>
