--- a/production/user-dash.html
+++ b/production/user-dash.html
@@ -414,8 +414,8 @@
                                 <!-- <li>Oleh : Hafiezar</li> -->
                             </ul>
                             <div class="g-margin-b-40--xs">
-                                <span class="s-plan-v1__price-mark">Rp.</span>
-                                <span class="s-plan-v1__price-tag">0</span>
+                                <span class="s-plan-v1__price-mark"></span>
+                                <span class="s-plan-v1__price-tag">Coming Soon</span>
                             </div>
                             <ul class="list-unstyled g-ul-li-tb-5--xs g-margin-b-40--xs">
                                 <li>
@@ -699,7 +699,7 @@
                         <div class="col-sm-5 g-hor-centered-row__col">
 
                             <h2 class="g-font-size-32--xs g-font-size-36--sm g-margin-b-25--xs">Short Movie</h2>
-                            <p class="g-font-size-14--sm">Not Yet Described.</p>
+                            <p class="g-font-size-14--sm">Sebuah kompetisi bagi siswa/i SMA/SMK sederajat se-pulau Jawa yang merupakan bagian dari rangkaian kegiatan IT EXPO UNJ 2018. Kompetisi ini dilaksanakan guna mengembangkan para kreatif muda Indonesia khususnya pulau Jawa di bidang Film Pendek.</p>
                         </div>
                         <div class="col-sm-1"></div>
                         <div class="col-sm-5 g-hor-centered-row__col">
@@ -761,7 +761,7 @@
                         <div class="col-sm-5 g-hor-centered-row__col">
 
                             <h2 class="g-font-size-32--xs g-font-size-36--sm g-margin-b-25--xs">Desain Poster</h2>
-                            <p class="g-font-size-14--sm">Not Yet Described.</p>
+                            <p class="g-font-size-14--sm">Sebuah kompetisi bagi siswa/i SMA/SMK sederajat se-pulau Jawa yang merupakan bagian dari rangkaian kegiatan IT EXPO UNJ 2018. Kompetisi ini dilaksanakan guna mengembangkan para kreatif muda Indonesia khususnya pulau Jawa di bidang desain poster.</p>
                         </div>
                         <div class="col-sm-1"></div>
                         <div class="col-sm-5 g-hor-centered-row__col">
@@ -808,8 +808,8 @@
                     <div class="row g-hor-centered-row--md g-row-col--5 g-margin-b-50--xs g-margin-b-60--md">
                         <div class="col-sm-5 g-hor-centered-row__col">
 
-                            <h2 class="g-font-size-32--xs g-font-size-36--sm g-margin-b-25--xs">E-Sports - Mobile Legends</h2>
-                            <p class="g-font-size-14--sm">Not Yet Described.</p>
+                            <h2 class="g-font-size-32--xs g-font-size-36--sm g-margin-b-25--xs">E-Sport - Mobile Legends</h2>
+                            <p class="g-font-size-14--sm">Sebuah kompetisi bagi siswa/i SMA/SMK sederajat se-pulau Jawa yang merupakan bagian dari rangkaian kegiatan IT EXPO UNJ 2018. Kompetisi ini dilaksanakan untuk menguji kemampuan para atlet muda e-sport Indonesia khusunya didaerah jakarta dan sekitarnya.</p>
                         </div>
                         <div class="col-sm-1"></div>
                         <div class="col-sm-5 g-hor-centered-row__col">
