--- a/production/index.html
+++ b/production/index.html
@@ -362,7 +362,7 @@
                                 <span class="g-display-inline-block--xs g-width-100--xs g-height-100--xs g-font-size-38--xs g-color--primary g-bg-color--white g-box-shadow__dark-lightest-v4 g-padding-x-20--xs g-padding-y-20--xs g-radius--circle">04</span>
                             </div>
                             <div class="g-padding-x-20--xs">
-                                <h3 class="g-font-size-18--xs g-color--white">EXPO</h3>
+                                <h3 class="g-font-size-18--xs g-color--white">Seminar dan EXPO</h3>
                                 <p class="g-font-size-18--xs g-color--white">29 November 2018</p>
                             </div>
                         </div>
