--- a/production/index_events.html
+++ b/production/index_events.html
@@ -771,7 +771,7 @@
                             <img class="img-responsive" src="img/desain-grafis-1.gif" alt="Mockup Image">
                         </div>
                     </div>
-                    <p>CP: +6283113536244 (Dimas)</p>
+                    <p>CP: Tamia +6289615673563</p>
                 </div>
                 <div class="modal-footer">
                     <a href="login.html" class="text-uppercase s-btn s-btn--sm s-btn--primary-bg g-radius--50 g-font-size-14--xs g-padding-x-20--xs">Registrasi</a>
