--- a/production/user-dash.html
+++ b/production/user-dash.html
@@ -464,9 +464,11 @@
         <div class="container g-text-center--xs g-padding-y-80--xs g-padding-y-125--sm">
             <div class="g-margin-b-80--xs">
                 <h2 class="g-font-size-40--xs g-font-size-50--sm g-font-size-60--md g-color--white">e-Sports - Mobile Legends</h2>
-                <span class="s-plan-v1__price-mark g-color--white">Rp.</span>
-                <span class="s-plan-v1__price-tag g-color--white">200.000</span>
-                <small class="g-color--white">/tim</small>
+                <div class="s-btn" style="cursor : default; background-color: white ;border-radius: 3px; padding: 10px 7px;">
+                    <span class="s-plan-v1__price-mark">Rp.</span>
+                    <span class="s-plan-v1__price-tag">200.000</span>
+                    <small class="">/tim</small>
+                </div>
             </div>
             <a class="text-uppercase s-btn s-btn--md s-btn--white-brd g-radius--50" data-toggle="modal" data-target="#modal-esport" id="r-ml">Registrasi</a>
         </div>
