--- a/production/login.html
+++ b/production/login.html
@@ -335,7 +335,7 @@
         <script src="vendor/swal/sweetalert2.all.min.js"></script>
         <!--========== END JAVASCRIPTS ==========-->
         <script type="text/javascript" src="js/config.js"></script>
-        <script type="text/javascript" src="js/api/auth.js"></script>
+        <script type="text/javascript" src="js/handler/auth.js"></script>
         <script type="text/javascript">
             checkAuth('outside');
 
