--- a/production/verifikasi.html
+++ b/production/verifikasi.html
@@ -23,6 +23,7 @@
     <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet" type="text/css" />
     <link href="vendor/swiper/swiper.min.css" rel="stylesheet" type="text/css" />
     <link href="vendor/cubeportfolio/css/cubeportfolio.min.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="vendor/swal/sweetalert2.min.css">
 
     <!-- Theme Styles -->
     <link href="css/style.css" rel="stylesheet" type="text/css" />
@@ -89,7 +90,7 @@
                         <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="index_events.html">Kegiatan</a></li>
                         <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="about.html">Tentang Kami</a></li>
                         <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="contacts.html">Kontak Kami</a></li>
-                        <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="login.html">Masuk / Daftar</a></li>
+                        <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="#" id="logout">Keluar</a></li>
                     </ul>
                     <!-- End Menu List -->
                 </div>
@@ -125,15 +126,13 @@
                     <img class="img-responsive" id="foto-profil" src="img/400x400/01.jpg" style="width: 200px; margin: auto; border-radius: 50%;" alt="Default Image">
                 </div>
                 <div class="col-sm-8 g-text-left--md">
-                    <h1 class="text-uppercase g-font-size-26--xs g-font-size-22--md g-font-size-36--lg g-color--white g-letter-spacing--1 g-margin-b-0--xs" id="nama-user">Username</h1>
-                    <p class="text-uppercase g-font-size-18--xs g-font-size-14--md g-font-size-20--lg g-font-weight--300 g-color--white-opacity g-letter-spacing--1 g-margin-b-0--xs" id="nama-instansi">Asal Instansi</p>
-                    <p class="g-font-size-18--xs g-font-size-14--md g-font-size-16--lg g-font-weight--100 g-color--white-opacity g-letter-spacing--1 g-margin-b-0--xs" id="email">email_user@itexpo.co.id</p>
-                    <p class="g-font-size-18--xs g-font-size-14--md g-font-size-16--lg g-font-weight--100 g-color--white-opacity g-letter-spacing--1 g-margin-b-0--xs" id="">Kegiatan Anda : </p>
-                    <p class="g-font-size-18--xs g-font-size-14--md g-font-size-16--lg g-font-weight--100 g-color--white-opacity g-letter-spacing--1 g-margin-b-0--xs" id="">Menunggu Verifikasi : </p>
-                    <p class="g-font-size-18--xs g-font-size-14--md g-font-size-16--lg g-font-weight--100 g-color--white-opacity g-letter-spacing--1 g-margin-b-0--xs" id="">Selesai Verifikasi : </p>
+                    <h1 class="text-uppercase g-font-size-26--xs g-font-size-22--md g-font-size-36--lg g-color--white g-letter-spacing--1 g-margin-b-0--xs" id="nama-user">Nama Pengguna</h1>
+                    <p class="text-uppercase g-font-size-18--xs g-font-size-14--md g-font-size-20--lg g-font-weight--300 g-color--white-opacity g-letter-spacing--1 g-margin-b-0--xs" id="instansi-user">Asal Instansi</p>
+                    <p class="g-font-size-18--xs g-font-size-14--md g-font-size-16--lg g-font-weight--100 g-color--white-opacity g-letter-spacing--1 g-margin-b-0--xs" id="email-user">email_user@itexpo.co.id</p>
                 </div>
+
                 <div class="col-sm-2 g-text-right--md g-text-right--xs  ">
-                    <a><button type="button" class="text-uppercase s-btn s-btn--sm s-btn--white-brd g-radius--50 g-padding-x-3--xs g-margin-b-5--xs g-margin-t-10--md g-margin-t-15--lg">Edit Profile</button></a>
+                    <a href='user-dash.html' class="text-uppercase s-btn s-btn--sm s-btn--white-brd g-radius--50 g-padding-x-3--xs g-margin-b-5--xs g-margin-t-10--md g-margin-t-15--lg">Kembali ke Profil</a>
                 </div>
             </div>
 
@@ -146,68 +145,21 @@
     <!-- Mockup -->
     <div class="g-hor-divider__dashed--sky-light">
         <div id="js__scroll-to-section" class="container g-padding-y-80--xs g-padding-y-125--xsm">
-            <div class="g-text-center--xs g-margin-b-100--xs">
-                <h3 class="text-uppercase g-font-weight--700 g-color--primary g-letter-spacing--2 g-margin-b-25--xs">Verifikasi Pembayaran</h3>
+            <div class="g-text-center--xs g-margin-b-50--xs">
+                <h3 class="text-uppercase g-font-weight--700 g-color--primary g-letter-spacing--2 g-margin-b-25--xs">Konfirmasi Pembayaran</h3>
+                <h4 id="nama-event">-</h4>
             </div>
-            <form class="center-block g-width-450--xs g-bg-color--white-opacity-lightest g-box-shadow__blueviolet-v1 g-padding-x-40--xs g-padding-y-60--xs g-radius--4">
+            <form id="form-bukti-bayar" class="center-block g-width-450--xs g-bg-color--white-opacity-lightest g-box-shadow__blueviolet-v1 g-padding-x-40--xs g-padding-y-60--xs g-radius--4">
                 <div class="g-margin-b-30--xs">
-                    <input type="text" class="form-control s-form-v3__input customForm" placeholder="* Kode Pendaftaran">
-                </div>
-                <div class="g-margin-b-30--xs">
-                    <input type="file" class="form-control s-form-v3__input customForm" placeholder="* Unggah Bukti Pembayaran">
+                    <input type="file" class="form-control s-form-v4__input customForm" placeholder="* Unggah Bukti Pembayaran" name="bukti_bayar">
                 </div>
                 <div class="g-text-center--xs">
-                    <a><button type="button" class="text-uppercase s-btn s-btn--sm s-btn--primary-bg g-radius--50 g-padding-x-50--xs">Submit</button></a>
+                    <button type="submit" class="text-uppercase s-btn s-btn--sm s-btn--primary-bg g-radius--50 g-padding-x-50--xs">Submit</button>
                 </div>
             </form>
         </div>
     </div>
     <!-- End Mockup -->
-
-    <!-- Clients -->
-    <div class="g-padding-y-50--xs g-padding-y-100--sm">
-        <div class="g-container--sm">
-            <div class="g-text-center--xs g-margin-b-80--xs">
-                <h2 class="g-font-size-32--xs g-font-size-36--sm">Sponsor</h2>
-                <p class="g-font-size-18--md">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            </div>
-        </div>
-        <div class="g-container--md">
-            <!-- Swiper Clients -->
-            <div class="s-swiper js__swiper-clients">
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide">
-                        <div class="wow fadeIn" data-wow-duration=".3" data-wow-delay=".1s">
-                            <img class="s-clients-v1" src="img/clients/01-dark.png" alt="Clients Logo">
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="wow fadeIn" data-wow-duration=".3" data-wow-delay=".2s">
-                            <img class="s-clients-v1" src="img/clients/02-dark.png" alt="Clients Logo">
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="wow fadeIn" data-wow-duration=".3" data-wow-delay=".3s">
-                            <img class="s-clients-v1" src="img/clients/03-dark.png" alt="Clients Logo">
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="wow fadeIn" data-wow-duration=".3" data-wow-delay=".4s">
-                            <img class="s-clients-v1" src="img/clients/04-dark.png" alt="Clients Logo">
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="wow fadeIn" data-wow-duration=".3" data-wow-delay=".5s">
-                            <img class="s-clients-v1" src="img/clients/05-dark.png" alt="Clients Logo">
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- End Swiper Clients -->
-        </div>
-    </div>
-    <!-- End Clients -->
-
 
     <!--========== END PAGE CONTENT ==========-->
 
@@ -284,7 +236,15 @@
     <script type="text/javascript" src="js/components/parallax.min.js"></script>
     <script type="text/javascript" src="js/components/portfolio-3-col.min.js"></script>
     <script type="text/javascript" src="js/components/wow.min.js"></script>
+    <script src="vendor/swal/sweetalert2.all.min.js"></script>
     <!--========== END JAVASCRIPTS ==========-->
+    <script type="text/javascript" src="js/config.js"></script>
+    <script type="text/javascript" src="js/handler/auth.js"></script>
+    <script type="text/javascript" src="js/handler/user-dash.js"></script>
+    <script type="text/javascript" src="js/handler/events.js"></script>
+    <script type="text/javascript">
+    checkAuth('inside');
+    </script>
 
 </body>
 <!-- End Body -->
