--- a/production/index.html
+++ b/production/index.html
@@ -80,9 +80,7 @@
                             <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="index_events.html">Kegiatan</a></li>
                             <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="about.html">Tentang Kami</a></li>
                             <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="contacts.html">Kontak Kami</a></li>
-
-                            <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="login.html">Masuk / Daftar</a></li>
-
+                            <li class="s-header__nav-menu-item"><a class="s-header__nav-menu-link s-header__nav-menu-link-divider" href="login.html" id="login-logout">Masuk / Daftar</a></li>
                         </ul>
                         <!-- End Menu List -->
                     </div>
@@ -525,7 +523,7 @@
                         <h4 class="s-header__logo-img s-header__logo-img-default" style="color:#13b1cd;">IT-EXPO</h4>
                     </div>
                     <div class="col-xs-6 g-text-right--xs">
-                        <p class="g-font-size-14--xs g-margin-b-0--xs g-color--white-opacity-light">Powered by: UNJ</p>
+                        <p class="g-font-size-14--xs g-margin-b-0--xs g-color--white-opacity-light">Powered by: <a href="http://www.keenthemes.com/">KeenThemes.com</a></p>
                     </div>
                 </div>
             </div>
@@ -566,7 +564,6 @@
         <script type="text/javascript" src="js/components/wow.min.js"></script>
         <script type="text/javascript" src="js/timecounter.js"></script>
         <!--========== END JAVASCRIPTS ==========-->
-
     </body>
     <!-- End Body -->
 
